--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -31,6 +31,7 @@
 					<div style="flex:1"><strong>Total</strong></div>
 				</div>
 				
+				{% for item in items %}
 				<div class="cart-row">
 					<div style="flex:2"><img class="row-image" src="{% static 'images/placeholder.png' %}"></div>
 					<div style="flex:2"><p>Product 1</p></div>
@@ -45,6 +46,7 @@
 					</div>
 					<div style="flex:1"><p>$32</p></div>
 				</div>
+				{% endfor %}
 
 			</div>
 		</div>
