--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -43,6 +43,7 @@
 			<br>
 			<div class="box-element hidden" id="payment-info">
 				<small>Paypal Options</small>
+				<button id="make-payment">Make Payment</button>
 			</div>
 			
 		</div>
@@ -73,5 +74,20 @@
 			document.getElementById('shipping-info').innerHTML = ''
 		}
 		
+		var form = document.getElementById('form')
+		form.addEventListener('submit', function(e){
+			e.preventDefault()
+			console.log('Form Submitted...')
+			document.getElementById('form-button').classList.add("hidden");
+			document.getElementById('payment-info').classList.remove("hidden");
+		})
+
+		document.getElementById('make-payment').addEventListener('click', function(e){
+			submitFormData()
+		})
+
+		function submitFormData(){
+			console.log("Payment button clicked")
+		}
 	</script>
 {% endblock content %}
