--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -29,7 +29,28 @@
       return cookieValue;
   }
   var csrftoken = getToken('csrftoken');
+
+  function getCookie(name) {
+    var cookiesArr = document.cookie.split(';');
+    for (var i = 0; i < cookiesArr.length; i++) {
+      var cookiePair = cookiesArr[i].split("=");
+      // Does this cookie string begin with the name we want?
+      if (name == cookiePair[0].trim()) {
+        return decodeURIComponent(cookiePair[1]);
+      }
+    }
+    return null;
+  }
+
+
+  var cart = JSON.parse(getCookie('cart'))
   
+  if (cart == undefined) {
+    cart = {}
+    console.log('Cart Created!', cart)
+    document.cookie = 'cart=' + JSON.stringify(cart) + ";domain=;path=/"
+  } 
+  console.log('Cart:', cart)
 
   </script>
 
