--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -44,7 +44,8 @@
 			<br>
 			<div class="box-element hidden" id="payment-info">
 				<small>Paypal Options</small>
-				<button id="make-payment">Make Payment</button>
+				<div id="paypal-button-container"></div>
+				<!-- <button id="make-payment">Make Payment</button> -->
 			</div>
 			
 		</div>
@@ -68,6 +69,47 @@
 			</div>
 		</div>
 	</div>
+	<script src="https://www.paypal.com/sdk/js?client-id=test&currency=USD"></script>
+	<script>
+        // Render the PayPal button into #paypal-button-container
+        paypal.Buttons({
+
+			style: {
+				color: 'blue',
+				shape: 'rect',
+			},
+
+            // Set up the transaction
+            createOrder: function(data, actions) {
+                return actions.order.create({
+                    purchase_units: [{
+                        amount: {
+                            value: '88.44'
+                        }
+                    }]
+                });
+            },
+
+            // Finalize the transaction
+            onApprove: function(data, actions) {
+                return actions.order.capture().then(function(orderData) {
+                    // Successful capture! For demo purposes:
+                    console.log('Capture result', orderData, JSON.stringify(orderData, null, 2));
+                    var transaction = orderData.purchase_units[0].payments.captures[0];
+                    alert('Transaction '+ transaction.status + ': ' + transaction.id + '\n\nSee console for all available details');
+
+                    // Replace the above to show a success message within this page, e.g.
+                    // const element = document.getElementById('paypal-button-container');
+                    // element.innerHTML = '';
+                    // element.innerHTML = '<h3>Thank you for your payment!</h3>';
+                    // Or go to another URL:  actions.redirect('thank_you.html');
+                });
+            }
+
+
+        }).render('#paypal-button-container');
+    </script>
+
 	<script type="text/javascript">
 		var shipping = '{{order.shipping}}'
 		var total = '{{order.get_cart_total|floatformat:2}}'
@@ -97,9 +139,9 @@
 			document.getElementById('payment-info').classList.remove("hidden");
 		})
 
-		document.getElementById('make-payment').addEventListener('click', function(e){
+		/* document.getElementById('make-payment').addEventListener('click', function(e){
 			submitFormData()
-		})
+		}) */
 
 		
 
